--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -20,8 +20,16 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li><a th:href="@{/add}">Add Jobs</a></li>
-        <li><a th:href="@{/logout}">Logout</a></li>
+        <th:block th:if="${session} and ${session.isEmpty()}">
+          <li><a th:href="@{/register}">Register</a></li>
+          <li><a th:href="@{/login}">Log In</a></li>
+        </th:block>
+
+        <th:block th:if="${session} and ${session.isEmpty()}">
+          <li><a th:href="@{/add}">Add Jobs</a></li>
+          <li><a th:href="@{/logout}">Log Out</a></li>
+        </th:block>
+
       </ul>
     </div>
   </div>
